cssfile/style.css
html{
    scroll-behavior: smooth;
    overflow-x: hidden;
    overflow-y: scroll;
}
::selection {
    color:#50284C;
    background:white;
  }
body{
    overflow-x: hidden;
}
.container-fluid{ 
    position:relative; 
    margin: 0;
    padding: 0;
}
nav.navbar-custom{
    background:none;
    transition: 0.4s ease;
    padding : 0;
}
.container-fluid video {
    position:relative;
    z-index:0;
}
div.main1{
    background-attachment: fixed;
}
.overlay {
    position:absolute;
    top:0;
    left:0;
    z-index:1;
    height: 100vh;
}
div.mainvid{
    height: 100vh !important;
}
video{
    height: 100vh;
    background-attachment: fixed;
    width: 100%;
    object-fit: cover; 
}
div.movedown{
    margin-top: 45%;
    margin-left: 40%;
}
p.heading{
    font-family: Asul;
    color:white;
    font-weight: 600;
    letter-spacing: 5px;
    font-size:5rem;
    text-transform: uppercase;
    width: 600px;
}
div.center{
    margin-top: 10%;
    background-color: black;
}
div.main2{
    margin-top: -5px;
    height: auto;
    background-image: linear-gradient(to bottom , #26172C,#50284C);
    position: absolute;
}
div.custom{
    margin-top: 10%;
}
div.borderone{
    border-radius: 20px;
    padding: 3%;
    margin-left: 30%;
    width: 60%;
}
div.design{
    background-color: lightgray;
    box-shadow: black;
    margin-left:-12%;
    margin-top: 10%;
    height:30rem;
    padding:3%;
    justify-content: center;
}
label.about{
    font-family: Asul;
    border-bottom: 1px solid black;
}
span:hover .extra {
    display: block;
}
p.note{
    margin-top:3%;
    color:black;
    font-size: 20px;
    font-family: Asul;
    justify-content:center;
}
img.tohover{
    display: none;
    transition: 1s ease;
}
img.hover:hover{
    display: none;
    transition: 1s ease;
}
img.hover:hover + img.tohover{
    display: block;
    transition: 1s ease;
}
div.design:hover{
    transform: rotate(-1.5deg);
    box-shadow: inset 0 0 0 10px #301B34;
    transition: 0.5s ease-in-out;
}
progress {
    width: 100%;
    height: 5px;
    background:white;
}
    
progress::-webkit-progress-value {
    background:lightgray;
}

progress::-webkit-progress-bar {
    background:#341D37;
}
div.skills{
    margin-top: 10%;
}
div.myrow{
    width: 60%;
}
img.hovericon:hover{
    transform:scale(1.15);
    transition: 0.5s ease-in-out;
}
label.skill{
    font-family: Asul;
    font-size: 6rem;
    color: white;
    border-bottom: 2px solid white;
}
div.top{
    margin-top:7%;
}
.hvr-sweep-to-right {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    position: relative;
    -webkit-transition-property: color;
    transition-property: color;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
  }
.hvr-sweep-to-right:before {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background:#2098D1;
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -webkit-transform-origin: 0 50%;
    transform-origin: 0 50%;
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
}
.hvr-sweep-to-right:hover, .hvr-sweep-to-right:focus, .hvr-sweep-to-right:active {
    color: white;
}
.hvr-sweep-to-right:hover:before, .hvr-sweep-to-right:focus:before, .hvr-sweep-to-right:active:before {
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
}
div.card{
    width: 20rem;
    margin: auto;
    padding : 1rem; 
    background-color:rgba(255,255,255,0.7);
}
button{
    font-size: 1.5rem;
    background-color:#50284C;
    color:white;
    padding-left: 2rem;
    padding-right: 2rem;
}
h1.project-title{
    color:black;
    text-transform:uppercase;
    font-family: Asul;
    font-size: 2rem;
    font-weight: 500;
    letter-spacing: 1.5px;
}
img.card{
    background-color:#50284C;
    position: absolute;
    height:40%;
    margin-left: 45%;
    margin-top: -12%;
    opacity: 0.3;
    z-index: 1;
}
p.mycard{
    font-family: Asul;
    color: black;
    font-size: 1.3rem;
}
img.proj{
    margin-top: -2%;
    display: none;
}
label.skill:hover + img.proj{
    display:inline-block;
}
.s-m{
    margin: 310px auto;
    justify-content: space-around;
    display: flex;
    max-width: 700px;
}
.s-m a{
    text-decoration: none;
    font-size: 3.1rem;
    color: #f1f1f1;
    width: 60px;
    height: 60px;
    text-align: center;
    transition: 0.4s all;
    line-height: 58px;
    cursor: pointer;
    border-radius: 50%;
}
.s-m a:hover{
    transform: scale(1.2);
}
div.about1{
    margin-top: 13%;
}
label.social{
    color: white;
    border-bottom: 2px solid white;
    font-family: Asul;
}
div.socialize{
    margin-top: -10%;
}
div.down{
    margin-top: 8%;
}
p.last{
    padding-bottom: 13%;
}
p.second{
    padding-bottom: 13%;
}
div.custom-container{
    padding-left: 5%;
    padding-right: 5%;
}
div.movedown1{
    margin-top: 10%;
}
div.card:hover{
    background-color:rgba(255,255,255,0.9);
    transition: 0.2s ease;
}
div.imgmove{
    margin-top: 4%;
}
@media screen and (max-width:1400px){
    p.heading{
        font-size: 4rem;
    }
}
@media screen and (max-width:1199px){
    div.border{
        margin-left: 2px;
    }
    div.border1{
        margin-left: 2.5px;
    }
    div.screen{
        margin-left: -3%;
    }
    p.heading{
        font-size: 3rem;
    }
}
@media screen and (max-width:1105px){
    p.mycard{
        font-size: 18px;
    }
    div.card{
        width: 19rem;
    }
    p.set{
        padding-bottom: 13%;
    }
    h1.project-title{
        font-size:1.7rem;
    }
}
@media screen and (max-width:991px){
    div.design{
        margin-left: 1.4%;
    }
    div.right{
        margin-left: 20%;
    }
    p.heading{
        font-size: 2.3rem;
    }
    label.skill{
        font-size: 4rem;
    }
    label.social{
        font-size: 4rem;
    }
    nav.navbar-custom{
        background-color: #26172C !important;
    }
    div.movedown{
        margin-left:14%;
    }
}

@media screen and (max-width:760px){
    p.heading{
        width:400px;
    }
    div.movedown{
        margin-top: 70%;
    }
    img.hovericon{
        width: 150px;
    }
    img.htmlimg{
        width: 280px;
    }
    img.djangoimg{
        width: 190px;
    }
    img.flaskimg{
        width: 220px;
    }
    img.bootstrapimg{
        width: 580px;
    }
    div.imgtop{
        margin-top: 0%;
    }
}
@media screen and (max-width:560px){
    p.note{
        font-size: 18px;
    }
    label.skill:hover + img.proj{
        display:none;
    }
    div.design:hover{
        transform: rotate(0deg);
        box-shadow: inset 0 0 0 0px #301B34;
        transition: 0.5s ease-in-out;
    }
}
@media screen and (max-width:560px){
    p.heading{
        width: 300px;
        font-size: 2rem;
    }
    div.movedown{
        margin-top: 90%;
        margin-left: 20%;
    }

}
@media screen and (max-width:380px){
    p.heading{
        font-size: 1.7rem;
        width: 200px;
        margin-top: 100%;
    }
    div.card{
        width: 17rem;
    }
    h1.project-title{
        font-size: 1.5rem;
    }
    p.note{
        font-size: 16px;
    }
}

